--- a/core-api/pom.xml
+++ b/core-api/pom.xml
@@ -5,13 +5,18 @@
     <parent>
         <artifactId>core-all</artifactId>
         <groupId>pl.zankowski.fixparser</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>core-api</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.immutables</groupId>
